2010-11-03  Ben Abbott <bpabbott@mac.com>

	* gl-render.cc: Do not give rendering error for uimenus.

2010-11-03  John W. Eaton  <jwe@octave.org>

	* DLD-FUNCTIONS/cquad.cc: If we don't have copysign but we do
	have _copysign, define copysign to be _copysign.

2010-11-02  John W. Eaton  <jwe@octave.org>

	* DLD-FUNCTIONS/cquad.cc (Fcquad): Use octave_Inf, not INFINITY.

2010-11-02  David Bateman  <dbateman@free.fr>

	* ls-hdf5.cc (bool hdf5_get_scalar_attr (hid_t, hid_t,
        const char *, void *), herr_t hdf5_add_scalar_attr
	(hid_t, hid_t, const char *, void *)): New functions.
	(herr_t hdf5_add_scalar_attr (hid_t, const char *)): Remove static
	definition to make this function visible externally.
	* ls-hdf5.h (extern OCTINTERP_API bool hdf5_check_attr (hid_t,
	const char *), extern OCTINTERP_API bool hdf5_get_scalar_attr
	(hid_t, hid_t, const char *, void *buf), extern OCTINTERP_API herr_t
	hdf5_add_attr (hid_t, const char *), extern OCTINTERP_API herr_t
	hdf5_add_scalar_attr (hid_t, hid_t, const char *, void *)): Function
	declarations.
	* ov-range.cc (bool octave_range::save_hdf5 (hid_t, const char *,
        bool)): Save the number of elements in the range as an HDF5 attribute.
	(bool octave_range::load_hdf5 (hid_t, const char *)): If an HDF5
	attribute containing the number of elements exists use it to ensure
	the correct number of elements in the range.

2010-11-01  David Bateman  <dbateman@free.fr>

	* gl-render.cc (void opengl_renderer::draw_patch (const
	patch::properties &)): Draw clipped contours of patches.
	* graphics.cc (template<class T> static void get_array_limits
	(const Array<T>&, double&, double&, double&)): Don't need to test
	for NaN as comparison is always false.
	(Matrix children_property::do_get_children (bool) const): New method of
	new children_property class.
	(void children_property::do_delete_children (bool)): Ditto.
	(void base_properties::remove_child (const graphics_handle&)): Delete.