@@ -1,3 +1,11 @@
+2010-11-08  Kai Habel  <kai.habel@gmx.de>
+
+	* fltk-backend.cc (do_find_uimenu_children): Simplify code, Remove 
+	unused code. (update_submenu): Remove unused function.
+	(add_to_menu (uimenu::properties&)): Simplify code. Get properties for valid objects 
+	only. (add_to_menu (figure::properties&)): Dito.
+	(remove_from_menu (T_prop&)): Dito.
+
 2010-11-03  Ben Abbott <bpabbott@mac.com>
 
 	* gl-render.cc: Do not give rendering error for uimenus.
